# TP_Proj2_GraKarciana

Gra_Karciana_cmake/: CMakeLists.txt  Gra_Karciana_cmake.cpp
